Fix menu z-index bug

--- a/app/app/client/menu/menu.import.less
+++ b/app/app/client/menu/menu.import.less
@@ -14,6 +14,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
+		z-index: 1;
 	}
 
 	.kangaroo {
@@ -52,6 +53,7 @@
 		color: @white;
 		display: inline-block;
 		font-size: 20px;
+		z-index: 1;
 	}
 
 	.hamburger-hitbox {
